# screensense

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  screensense.py
model/: model.tflite
