[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screensense"
version = "1.0.0"
description = "Visual triage for pentesting screenshots"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "tensorflow>=2.13",
    "Pillow>=9.0",
    "numpy>=1.24",
]

[tool.setuptools]
py-modules = ["screensense"]
